# Assignment-2-ROzy-Patel

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Load_Test_Report.md  README.md  coverage_report.md  locustfile.py  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  train.py
app/: main.py
app/data/: model.json
tests/: test_api.py  test_edge_cases.py  test_gcs_integration.py  test_model.py  test_validation.py
