[project]
name = "lab3_rozy_patel"
version = "0.1.0"
description = "Penguin classification with XGBoost and FastAPI"
authors = [{ name = "Rozy Patel" }]
requires-python = ">=3.8"

dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "xgboost==3.0.2",
    "pandas==2.3.1",
    "scikit-learn==1.7.1",
    "seaborn==0.13.2",
    "matplotlib==3.10.3",
    "pydantic==2.11.7",
    "starlette==0.47.2",
    "numpy==2.3.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "python-dateutil==2.9.0.post0",
    "scipy==1.16.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.59.0",
    "kiwisolver==1.4.8",
    "packaging==25.0",
    "pyparsing==3.2.3",
    "pillow==11.3.0",
    "h11==0.16.0",
    "anyio==4.9.0",
    "sniffio==1.3.1",
    "annotated-types==0.7.0",
    "pydantic-core==2.33.2",
    "threadpoolctl==3.6.0",
    "joblib==1.5.1",
    "colorama==0.4.6",
    "tzdata==2025.2",
    "pytz==2025.2",
    "six==1.17.0",
    "idna==3.10",
    "click==8.2.1",
    "pytest==8.3.4",
    "httpx==0.28.1",
    "pytest-cov==6.0.0"
]
